--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Run tests
         shell: bash
-        run: npm test
+        run: node --test test/*.test.js
 
   lint:
     runs-on: ubuntu-latest
